# ndreynolds.github.com

./: .gitignore  CNAME  Makefile  Site.hs  archive.html  atom.xml  blog.cabal  index.html  life.js  rss.xml  site.hs  stack.yaml  style.css
css/: normalize.css  pandoc-solarized.css  pandoc.css  site.css  skeleton.css  style.css  styles.css  tufte.css  vendor.css
css/lightview/: lightview.css
deutsch-projekt/: index.html  juli1932.csv  parties.json  sept1930.csv  style.css
deutsch-projekt/js/: graphic.js
js/: life.js  lightview.js
posts/: 2014-07-15-rspec-intro-part1.html  2014-07-15-rspec-intro-part1.md  2015-01-20-rspec-intro-part2.html  2015-01-20-rspec-intro-part2.md  2015-01-31-getting-angular-and-rails-talking.html  2015-01-31-getting-angular-and-rails-talking.md  2015-02-10-rust-first-impressions.html  2015-02-10-rust-first-impressions.md  2019-01-27-terminal-apps-with-elixir.html  2019-01-27-terminal-apps-with-elixir.md  2019-02-05-learning-haskell-via-advent-of-code.html  2019-02-05-learning-haskell-via-advent-of-code.md  2019-03-01-an-ML-for-the-BEAM.html
templates/: archive.html  assets.html  footer.html  header.html  layout.html  post-layout.html  post-list.html  post.html
