name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , pandoc == 2.5.*
                  , pandoc-sidenote == 0.19.*
  ghc-options:      -threaded
  default-language: Haskell2010
